--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "boss-api-proxy",
   "version": "1.0.0",
+  "private": true,
+  "type": "module",
   "main": "api/boss-integration.js",
   "dependencies": {
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "@upstash/redis": "^1.31.0"
   },
   "engines": {
     "node": "20.x"
