--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
+  "main": "api/boss-integration.js",
   "dependencies": {
     "axios": "^1.6.0",
-    "@upstash/redis": "^1.34.0"
-  },
-  "engines": {
-    "node": "20.x"
+    "@upstash/redis": "^1.36.1",
+    "next": "13.5.8",
+    "node-fetch": "^3.3.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
+
