--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "type": "module",
   "main": "api/boss-integration.js",
   "dependencies": {
-    "axios": "^1.6.0",
     "@upstash/redis": "^1.36.1",
+    "axios": "^1.6.0",
+    "dotenv": "^17.2.3",
     "next": "13.5.8",
     "node-fetch": "^3.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
 }
-
