--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
     "node-fetch": "^3.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^25.0.10",
+    "@vercel/node": "^5.5.27",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
