--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "boss-api-proxy",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "main": "api/boss-integration.js",
   "dependencies": {
     "@upstash/redis": "^1.36.1",
