--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "@vercel/node": "^5.5.27",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
+  },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   }
 }
