--- a/package.json
+++ b/package.json
@@ -2,25 +2,22 @@
   "name": "boss-api-proxy",
   "version": "1.0.0",
   "private": true,
-  "main": "api/boss-integration.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "@upstash/redis": "^1.36.1",
+    "next": "13.5.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "axios": "^1.6.0",
     "dotenv": "^17.2.3",
-    "next": "13.5.8",
-    "node-fetch": "^3.3.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@upstash/redis": "^1.36.1",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
-    "@types/node": "^25.0.10",
-    "@vercel/node": "^5.5.27",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "@types/node": "^25.0.10"
   }
 }
