--- a/package.json
+++ b/package.json
@@ -10,14 +10,6 @@
   "dependencies": {
     "next": "13.5.8",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "axios": "^1.6.0",
-    "dotenv": "^17.2.3",
-    "@upstash/redis": "^1.36.1",
-    "node-fetch": "^3.3.2"
-  },
-  "devDependencies": {
-    "typescript": "^5.9.3",
-    "@types/node": "^25.0.10"
+    "react-dom": "18.2.0"
   }
 }
