--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-		{
+{
   "name": "boss-api-proxy",
   "version": "1.0.0",
   "private": true,
@@ -11,6 +11,11 @@
     "next": "13.5.8",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.19.0",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
+    "typescript": "^5.3.3"
   }
 }
-
