--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@upstash/redis": "^1.36.1",
     "next": "13.5.8",
     "react": "18.2.0",
     "react-dom": "18.2.0"
