--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "boss-api-proxy",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
   "dependencies": {
     "@upstash/redis": "^1.36.1",
-    "next": "13.5.8",
+    "ioredis": "^5.9.2",
+    "next": "13.5.6",
+    "node-fetch": "^3.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "vercel-build": "next build",
+    "start": "next start"
+  },
   "devDependencies": {
-    "@types/node": "^18.19.0",
-    "@types/react": "^18.3.27",
-    "@types/react-dom": "^18.3.7",
-    "typescript": "^5.3.3"
+    "@types/node": "25.1.0",
+    "@types/react": "19.2.10",
+    "typescript": "5.9.3"
   }
 }
