--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "vercel-build": "next build"
   },
   "dependencies": {
-    "next": "13.5.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "node-fetch": "^3.3.2",
     "@upstash/redis": "^1.33.0",
-    "ioredis": "^5.3.2"
+    "ioredis": "^5.3.2",
+    "next": "13.5.6",
+    "node-fetch": "^3.3.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^25.1.0",
+    "@types/react": "^19.2.10",
+    "supports-color": "^10.2.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
-
