--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "vercel-build": "next build"
   },
   "dependencies": {
-    "@upstash/redis": "^1.33.0",
+    "@upstash/redis": "^1.36.1",
+    "@vercel/kv": "^3.0.0",
     "ioredis": "^5.3.2",
     "next": "13.5.6",
     "node-fetch": "^3.3.2",
@@ -23,5 +24,8 @@
     "supports-color": "^10.2.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
